<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pri_blue"
    tools:context=".menu">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".menu">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="307dp"
            android:layout_height="425dp"
            android:layout_marginTop="68dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar2"
            app:srcCompat="@drawable/cubo" />

        <Button
            android:id="@+id/button3"
            android:layout_width="164dp"
            android:layout_height="58dp"
            android:layout_marginTop="84dp"
            android:text="@string/Historial"
            android:textColor="@color/pri_blue"
            android:onClick="hist"
            app:backgroundTint="@color/pri_yellow"
            app:layout_constraintEnd_toEndOf="@+id/Control"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/Control"
            app:layout_constraintTop_toBottomOf="@+id/Control" />

        <Button
            android:id="@+id/cerrar"
            android:layout_width="164dp"
            android:layout_height="58dp"
            android:layout_marginTop="84dp"
            android:text="@string/Cerrar"
            android:textColor="@color/pri_blue"
            app:backgroundTint="@color/pri_yellow"
            app:layout_constraintEnd_toEndOf="@+id/button3"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/button3"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

        <Button
            android:id="@+id/Control"
            android:layout_width="164dp"
            android:layout_height="58dp"
            android:layout_marginTop="108dp"
            android:onClick="control"
            android:text="@string/Control"
            android:textColor="@color/pri_blue"
            app:backgroundTint="@color/pri_yellow"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:background="@color/pri_yellow"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/menu"
            android:textColor="@color/pri_blue"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:textAllCaps="false" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:text="@string/desarrollo"
            android:textColor="@color/pri_yellow"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <Space
            android:layout_width="46dp"
            android:layout_height="58dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView >