<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pri_blue"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="174dp"
            android:layout_height="155dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar5"
            app:srcCompat="@drawable/circulo" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="139dp"
            android:layout_height="114dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView7"
            app:layout_constraintEnd_toEndOf="@+id/imageView7"
            app:layout_constraintStart_toStartOf="@+id/imageView7"
            app:layout_constraintTop_toTopOf="@+id/imageView7"
            app:srcCompat="@drawable/control" />

        <Button
            android:id="@+id/button8"
            android:layout_width="164dp"
            android:layout_height="58dp"
            android:layout_marginTop="20dp"
            android:onClick="control"
            android:text="@string/incheck"
            android:textColor="@color/pri_blue"
            app:backgroundTint="@color/pri_yellow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/t3" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar5"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:background="@color/pri_yellow"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/formun"
            android:textColor="@color/pri_blue"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:textAllCaps="false" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:text="@string/vehi"
            android:textColor="@color/pri_yellow"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView7" />

        <Spinner
            android:id="@+id/sp1"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/pri_yellow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:text="@string/idvehi"
            android:textColor="@color/pri_yellow"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sp1" />

        <EditText
            android:id="@+id/t1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:ems="10"

            android:textColor="@color/pri_yellow"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <CheckBox
            android:id="@+id/cb1"
            android:layout_width="50dp"
            android:layout_height="41dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:onClick="itemClicked"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView19" />

        <EditText
            android:id="@+id/t2"
            android:layout_width="227dp"
            android:layout_height="41dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:textColor="@color/pri_yellow"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/cb1"
            app:layout_constraintTop_toBottomOf="@+id/textView19" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:text="@string/obs"
            android:textColor="@color/pri_yellow"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cb1" />

        <EditText
            android:id="@+id/t3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/pri_yellow"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView18" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:text="@string/dispo"
            android:textColor="@color/pri_yellow"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/t1" />

        <Space
            android:layout_width="97dp"
            android:layout_height="58dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button8" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>