<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pri_blue"
    tools:context=".Historial">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchor="@+id/constraintLayout2"
        app:layout_anchorGravity="center">

        <Button
            android:id="@+id/desc"
            android:layout_width="164dp"
            android:layout_height="58dp"
            android:layout_marginTop="28dp"
            android:text="@string/Descargar"
            android:textColor="@color/pri_blue"
            app:backgroundTint="@color/pri_yellow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gett1"
            app:layout_constraintVertical_bias="0.179" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar3"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:background="@color/pri_yellow"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/Historial"
            android:textColor="@color/pri_blue"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:textAllCaps="false" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="235dp"
            android:layout_height="197dp"
            android:layout_marginTop="56dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar3"
            app:srcCompat="@drawable/circulo" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="139dp"
            android:layout_height="114dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
            app:layout_constraintEnd_toEndOf="@+id/imageView5"
            app:layout_constraintStart_toStartOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="@+id/imageView5"
            app:srcCompat="@drawable/control" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="92dp"
            android:layout_marginTop="44dp"
            android:text="@string/filter"
            android:textColor="@color/pri_yellow"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="231dp"
            android:layout_height="41dp"
            android:layout_marginStart="92dp"
            android:layout_marginTop="24dp"
            android:textColor="@color/pri_yellow"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="92dp"
            android:layout_marginTop="36dp"
            android:text="@string/Fecha"
            android:textColor="@color/pri_yellow"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner" />

        <EditText
            android:id="@+id/gett1"
            android:layout_width="231dp"
            android:layout_height="41dp"
            android:layout_marginStart="92dp"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/pri_yellow"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <Space
            android:layout_width="56dp"
            android:layout_height="38dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/desc" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView >